do not update to keras 2.7.0

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ tensorflow-macos = "^2.6.0"
 tensorflow-metal = "^0.2.0"
 scipy = {path = "../../packages/dist/scipy-1.7.1-cp39-cp39-macosx_11_0_arm64.whl"}
 scikit-learn = "^1.0.1"
+keras = "2.6.0"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.6.0"
